src/test/ui/issues/issue-44415.stderr
error[E0391]: cycle detected when computing layout of `Foo`
   |
note: ...which requires normalizing `ParamEnvAnd { param_env: ParamEnv { caller_bounds: [], reveal: All }, value: [u8; _] }`...
note: ...which requires const-evaluating `Foo::bytes::{{constant}}`...
  --> $DIR/issue-44415.rs:19:26
   |
LL |     bytes: [u8; unsafe { intrinsics::size_of::<Foo>() }],
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing layout of `Foo`, completing the cycle
note: cycle used when const-evaluating `Foo::bytes::{{constant}}`
  --> $DIR/issue-44415.rs:19:26
   |
LL |     bytes: [u8; unsafe { intrinsics::size_of::<Foo>() }],
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
